--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -15,12 +15,6 @@
             </div>
         </div>
 
-        <div id="boxsetTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="collections.html" class="ui-btn-active">${TabCollections}</a>
-            </div>
-        </div>
-
         <div class="itemTabs homeTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="index.html" class="lnkHomeHome"><iron-icon icon="home"></iron-icon>${TabHome}</a>
@@ -33,12 +27,12 @@
         <div id="movieTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="movies.html" class="lnkMovies"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
-                <a href="movietrailers.html" class="movieTrailersTab lnkMovieTrailers"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
-                <a href="collections.html?context=movies" class="lnkCollections"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
-                <a href="moviegenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="moviepeople.html" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="moviestudios.html" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
+                <a href="moviesrecommended.html?tab=1" class="lnkMovies"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
+                <a href="moviesrecommended.html?tab=2" class="movieTrailersTab lnkMovieTrailers"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
+                <a href="moviesrecommended.html?tab=3" class="lnkCollections"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
+                <a href="moviesrecommended.html?tab=4"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
+                <a href="moviesrecommended.html?tab=5" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
+                <a href="moviesrecommended.html?tab=6" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
             </div>
         </div>
         <div class="itemTabs photoTabs" style="display: none;">
