--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -17,13 +17,13 @@
                 <paper-tab class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs scopedLibraryViewNav" style="display:none;">
-                <a href="moviesrecommended.html" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="moviesrecommended.html?tab=1"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
-                <a href="moviesrecommended.html?tab=2" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
-                <a href="moviesrecommended.html?tab=3"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
-                <a href="moviesrecommended.html?tab=4"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="moviesrecommended.html?tab=5" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="moviesrecommended.html?tab=6" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
+                <a href="movies.html" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+                <a href="movies.html?tab=1"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
+                <a href="movies.html?tab=2" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
+                <a href="movies.html?tab=3"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
+                <a href="movies.html?tab=4"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
+                <a href="movies.html?tab=5" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
+                <a href="movies.html?tab=6" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
             </div>
         </div>
 
