--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -5,7 +5,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="myPreferencesMenuPage" data-role="page" class="page libraryPage userPreferencesPage noSecondaryNavPage" data-contextname="${HeaderSettings}" data-require="scripts/mypreferencescommon,paperbuttonstyle,jqmicons">
+    <div id="myPreferencesMenuPage" data-role="page" class="page libraryPage userPreferencesPage noSecondaryNavPage" data-contextname="${HeaderSettings}" data-require="scripts/mypreferencescommon,paperbuttonstyle">
 
         <style>
             .listAvatar.green {
