--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -209,66 +209,56 @@
                                     <br />
 
                                     <div class="detailSection" id="collapsibleDvdEpisodeInfo" style="display: none;">
-                                        <div class="detailSectionHeader">
+                                        <h1>
                                             ${HeaderAlternateEpisodeNumbers}
-                                        </div>
-                                        <div class="detailSectionContent" style="padding: 0 .5em;">
-                                            <br />
+                                        </h1>
+                                        <div class="detailSectionContent">
                                             <div>
-                                                <label for="txtDvdSeasonNumber">${LabelDvdSeasonNumber}</label>
-                                                <input type="number" id="txtDvdSeasonNumber" pattern="[0-9]*" />
+                                                <paper-input id="txtDvdSeasonNumber" type="number" pattern="[0-9]*" label="${LabelDvdSeasonNumber}"></paper-input>
                                             </div>
                                             <div>
-                                                <label for="txtDvdEpisodeNumber">${LabelDvdEpisodeNumber}</label>
-                                                <input type="number" id="txtDvdEpisodeNumber" pattern="[0-9]*" />
+                                                <paper-input id="txtDvdEpisodeNumber" type="number" pattern="[0-9]*" label="${LabelDvdEpisodeNumber}"></paper-input>
                                             </div>
                                             <div>
-                                                <label for="txtAbsoluteEpisodeNumber">${LabelAbsoluteEpisodeNumber}</label>
-                                                <input type="number" id="txtAbsoluteEpisodeNumber" pattern="[0-9]*" />
+                                                <paper-input id="txtAbsoluteEpisodeNumber" type="number" pattern="[0-9]*" label="${LabelAbsoluteEpisodeNumber}"></paper-input>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="detailSection" id="collapsibleSpecialEpisodeInfo" style="display: none;">
-                                        <div class="detailSectionHeader">
+                                        <h1>
                                             ${HeaderSpecialEpisodeInfo}
-                                        </div>
-                                        <div class="detailSectionContent" style="padding: 0 .5em;">
-                                            <br />
+                                        </h1>
+                                        <div class="detailSectionContent">
                                             <div>
-                                                <label for="txtAirsBeforeSeason">${LabelAirsBeforeSeason}</label>
-                                                <input type="number" id="txtAirsBeforeSeason" pattern="[0-9]*" />
+                                                <paper-input id="txtAirsBeforeSeason" type="number" pattern="[0-9]*" label="${LabelAirsBeforeSeason}"></paper-input>
                                             </div>
                                             <div>
-                                                <label for="txtAirsAfterSeason">${LabelAirsAfterSeason}</label>
-                                                <input type="number" id="txtAirsAfterSeason" pattern="[0-9]*" />
+                                                <paper-input id="txtAirsAfterSeason" type="number" pattern="[0-9]*" label="${LabelAirsAfterSeason}"></paper-input>
                                             </div>
                                             <div>
-                                                <label for="txtAirsBeforeEpisode">${LabelAirsBeforeEpisode}</label>
-                                                <input type="number" id="txtAirsBeforeEpisode" pattern="[0-9]*" />
+                                                <paper-input id="txtAirsBeforeEpisode" type="number" pattern="[0-9]*" label="${LabelAirsBeforeEpisode}"></paper-input>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="detailSection">
-                                        <div class="detailSectionHeader">
+                                        <h1>
                                             ${HeaderExternalIds}
-                                        </div>
-                                        <div class="detailSectionContent" style="padding: 0 .5em;">
+                                        </h1>
+                                        <div class="detailSectionContent">
                                             <div class="externalIds editorFieldset">
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="detailSection" id="collapsibleDisplaySettings" style="display:none;">
-                                        <div class="detailSectionHeader">
+                                        <h1>
                                             ${HeaderDisplaySettings}
-                                        </div>
-                                        <div class="detailSectionContent" style="padding: 0 .5em;">
-                                            <br />
+                                        </h1>
+                                        <div class="detailSectionContent">
                                             <div id="fldSourceType" style="display: none;" class="fldDisplaySetting">
-                                                <label for="txtDisplayMediaType">${LabelTreatImageAs}</label>
-                                                <input type="text" id="txtDisplayMediaType" />
+                                                <paper-input id="txtDisplayMediaType" type="text" label="${LabelTreatImageAs}"></paper-input>
                                             </div>
                                             <div id="fldDisplaySpecialsInline" class="fldDisplaySetting">
                                                 <label for="chkDisplaySpecialsInline">${LabelDisplaySpecialsWithinSeasons}</label>
@@ -350,10 +340,9 @@
                                             <ul data-role="listview" data-inset="true" data-split-icon="delete" id="listTags"></ul>
                                         </div>
                                     </div>
-                                    <div data-role="collapsible" data-mini="true" id="metadataSettingsCollapsible" style="display: none; margin-top: 1em;">
-                                        <h3>${HeaderMetadataSettings}</h3>
+                                    <div id="metadataSettingsCollapsible" style="display: none; margin-top: 3em;">
+                                        <h1>${HeaderMetadataSettings}</h1>
                                         <div>
-                                            <br />
                                             <div>
                                                 <label for="selectLanguage">${LabelMetadataDownloadLanguage}</label>
                                                 <select id="selectLanguage" data-mini="true"></select>
@@ -366,15 +355,13 @@
                                             </div>
                                             <div class="fieldDescription editorfieldDescription">${MessageLeaveEmptyToInherit}</div>
 
-                                            <p>
-                                                <br />
-                                                <label for="chkLockData">${LabelLockItemToPreventChanges}</label>
-                                                <input data-mini="true" type="checkbox" id="chkLockData" onchange="EditItemMetadataPage.setProviderSettingsContainerVisibility(this)" />
-                                            </p>
+                                            <div>
+                                                <br /><br />
+                                                <paper-checkbox id="chkLockData" onchange="EditItemMetadataPage.setProviderSettingsContainerVisibility(this)">${LabelLockItemToPreventChanges}</paper-checkbox>
+                                            </div>
                                             <br />
                                             <div id="providerSettingsContainer" style="display: none">
                                             </div>
-                                            <br />
                                         </div>
                                     </div>
                                     <br />
