update metadata editor

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -163,39 +163,36 @@
                                             </div>
 
                                         </div>
-                                        <div data-role="fieldcontain" id="fldAirTime" style="display: none;">
-                                            <label for="txtAirTime">${LabelAirTime}</label>
-                                            <input type="time" id="txtAirTime" />
+                                        <div id="fldAirTime" style="display: none;">
+                                            <paper-input id="txtAirTime" type="time" label="${LabelAirTime}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldSeriesRuntime" style="display: none;">
-                                            <label for="txtSeriesRuntime">${LabelRuntimeMinutes}</label>
-                                            <input type="number" id="txtSeriesRuntime" />
+                                        <div id="fldSeriesRuntime" style="display: none;">
+                                            <paper-input id="txtSeriesRuntime" type="number" label="${LabelRuntimeMinutes}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldOfficialRating" style="display: none;">
+                                        <div id="fldOfficialRating" style="display: none;">
+                                            <br />
                                             <label for="selectOfficialRating">${LabelParentalRating}</label>
                                             <select id="selectOfficialRating" data-mini="true"></select>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldCustomRating" style="display: none;">
+                                        <div id="fldCustomRating" style="display: none;">
+                                            <br />
                                             <label for="selectCustomRating">${LabelCustomRating}</label>
                                             <select id="selectCustomRating" data-mini="true"></select>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldBudget" style="display: none;">
-                                            <label for="txtBudget">${LabelBudget}</label>
-                                            <input type="number" id="txtBudget" />
+                                        <div id="fldBudget" style="display: none;">
+                                            <paper-input id="txtBudget" type="number" label="${LabelBudget}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldRevenue" style="display: none;">
-                                            <label for="txtRevenue">${LabelRevenue}</label>
-                                            <input type="number" id="txtRevenue" />
+                                        <div id="fldRevenue" style="display: none;">
+                                            <paper-input id="txtRevenue" type="number" label="${LabelRevenue}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldOriginalAspectRatio" style="display: none;">
-                                            <label for="txtOriginalAspectRatio">${LabelOriginalAspectRatio}</label>
-                                            <input type="text" id="txtOriginalAspectRatio" />
+                                        <div id="fldOriginalAspectRatio" style="display: none;">
+                                            <paper-input id="txtOriginalAspectRatio" type="text" label="${LabelOriginalAspectRatio}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldPlayers" style="display: none;">
-                                            <label for="txtPlayers">${LabelPlayers}</label>
-                                            <input type="number" id="txtPlayers" pattern="[0-9]*" />
+                                        <div id="fldPlayers" style="display: none;">
+                                            <paper-input id="txtPlayers" type="number" pattern="[0-9]*" label="${LabelPlayers}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fld3dFormat" style="display: none;">
+                                        <div id="fld3dFormat" style="display: none;">
+                                            <br />
                                             <label for="select3dFormat">${Label3DFormat}</label>
                                             <select id="select3dFormat" data-mini="true">
                                                 <option value=""></option>
