--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -41,126 +41,98 @@
                                         <paper-button raised class="subdued notext btnMore"><iron-icon icon="more-vert"></iron-icon></paper-button>
                                     </div>
 
-                                    <div style="padding: 10px 0;">
-                                        <div data-role="fieldcontain" id="fldContentType" style="display:none;">
+                                    <div style="padding: 0 0 10px;">
+                                        <h1>${HeaderMetadata}</h1>
+                                        <div id="fldContentType" style="display:none;">
                                             <label for="selectContentType">${LabelContentType}</label>
                                             <select id="selectContentType" data-mini="true"></select>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldPath">
-                                            <label for="txtPath">${LabelPath}</label>
-                                            <input type="text" id="txtPath" readonly="readonly" />
+                                        <div id="fldPath">
+                                            <paper-input id="txtPath" type="text" label="${LabelPath}" readonly></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain">
-                                            <label for="txtName">${LabelName}</label>
-                                            <input type="text" id="txtName" required="required" />
+                                        <div>
+                                            <paper-input id="txtName" type="text" label="${LabelName}" required="required"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldSortName" style="display: none;">
-                                            <label for="txtSortName">${LabelSortName}</label>
-                                            <input type="text" id="txtSortName" />
+                                        <div id="fldSortName" style="display: none;">
+                                            <paper-input id="txtSortName" type="text" label="${LabelSortName}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldDateAdded" style="display: none;">
-                                            <label for="txtDateAdded">${LabelDateAdded}</label>
-                                            <input type="date" id="txtDateAdded" />
+                                        <div id="fldDateAdded" style="display: none;">
+                                            <paper-input id="txtDateAdded" type="date" label="${LabelDateAdded}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldStatus" style="display: none;">
+                                        <div id="fldStatus" style="display: none;">
                                             <label for="selectStatus">${LabelStatus}</label>
                                             <select id="selectStatus" data-mini="true"></select>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldArtist" style="display: none;">
-                                            <label for="txtArtist">${LabelArtists}</label>
-                                            <input type="text" id="txtArtist" placeholder="${LabelArtistsHelp}" />
+                                        <div id="fldArtist" style="display: none;">
+                                            <paper-input id="txtArtist" type="text" label="${LabelArtists}" placeholder="${LabelArtistsHelp}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldAlbumArtist" style="display: none;">
-                                            <label for="txtAlbumArtist">${LabelAlbumArtists}</label>
-                                            <input type="text" id="txtAlbumArtist" placeholder="${LabelArtistsHelp}" />
+                                        <div id="fldAlbumArtist" style="display: none;">
+                                            <paper-input id="txtAlbumArtist" type="text" label="${LabelAlbumArtists}" placeholder="${LabelArtistsHelp}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldAlbum" style="display: none;">
-                                            <label for="txtAlbum">${LabelAlbum}</label>
-                                            <input type="text" id="txtAlbum" />
+                                        <div id="fldAlbum" style="display: none;">
+                                            <paper-input id="txtAlbum" type="text" label="${LabelAlbum}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldParentIndexNumber" style="display: none;">
-                                            <label id="lblParentIndexNumber" for="txtParentIndexNumber"></label>
-                                            <input type="number" id="txtParentIndexNumber" pattern="[0-9]*" />
+                                        <div id="fldParentIndexNumber" style="display: none;">
+                                            <paper-input id="txtParentIndexNumber" type="number"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldIndexNumber" style="display: none;">
-                                            <label id="lblIndexNumber" for="txtIndexNumber"></label>
-                                            <input type="number" id="txtIndexNumber" pattern="[0-9]*" />
+                                        <div id="fldIndexNumber" style="display: none;">
+                                            <paper-input id="txtIndexNumber" type="number" pattern="[0-9]*"></paper-input>
                                         </div>
-                                        <div id="fldCommunityRating" style="display: none;" data-role="fieldcontain">
-                                            <label for="txtCommunityRating">${LabelCommunityRating}</label>
-                                            <input type="number" id="txtCommunityRating" step=".1" min="0" max="10" />
+                                        <div id="fldCommunityRating" style="display: none;">
+                                            <paper-input id="txtCommunityRating" type="number" step=".1" min="0" max="10" label="${LabelCommunityRating}"></paper-input>
                                         </div>
-                                        <div id="fldCommunityVoteCount" style="display: none;" data-role="fieldcontain">
-                                            <label for="txtCommunityVoteCount">${LabelVoteCount}</label>
-                                            <input type="number" id="txtCommunityVoteCount" />
+                                        <div id="fldCommunityVoteCount" style="display: none;">
+                                            <paper-input id="txtCommunityVoteCount" type="number" step="1" label="${LabelVoteCount}"></paper-input>
                                         </div>
-                                        <div id="fldMetascore" style="display: none;" data-role="fieldcontain">
-                                            <label for="txtMetascore">${LabelMetascore}</label>
-                                            <input type="number" id="txtMetascore" step="1" min="0" max="100" />
+                                        <div id="fldMetascore" style="display: none;">
+                                            <paper-input id="txtMetascore" type="number" step="1" min="0" max="100" label="${LabelMetascore}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldCriticRating" style="display: none;">
-                                            <label for="txtCriticRating">${LabelCriticRating}</label>
-                                            <input type="number" id="txtCriticRating" step=".1" />
+                                        <div id="fldCriticRating" style="display: none;">
+                                            <paper-input id="txtCriticRating" type="number" step=".1" label="${LabelCriticRating}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldCriticRatingSummary" style="display: none;">
-                                            <label for="txtCriticRatingSummary">${LabelCriticRatingSummary}</label>
-                                            <input type="text" id="txtCriticRatingSummary" />
+                                        <div id="fldCriticRatingSummary" style="display: none;">
+                                            <paper-input id="txtCriticRatingSummary" type="text" label="${LabelCriticRatingSummary}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldAwardSummary" style="display: none;">
-                                            <label for="txtAwardSummary">${LabelAwardSummary}</label>
-                                            <input type="text" id="txtAwardSummary" />
+                                        <div id="fldAwardSummary" style="display: none;">
+                                            <paper-input id="txtAwardSummary" type="text" label="${LabelAwardSummary}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain">
-                                            <label for="txtHomePageUrl">${LabelWebsite}</label>
-                                            <input type="url" id="txtHomePageUrl" />
+                                        <div>
+                                            <paper-input id="txtHomePageUrl" type="text" label="${LabelWebsite}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldTagline" style="display: none;">
-                                            <label for="txtTagline">${LabelTagline}</label>
-                                            <input type="text" id="txtTagline" />
+                                        <div id="fldTagline" style="display: none;">
+                                            <paper-input id="txtTagline" type="text" label="${LabelTagline}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain">
-                                            <label for="txtOverview">${LabelOverview}</label>
-                                            <textarea id="txtOverview"></textarea>
+                                        <div>
+                                            <paper-textarea id="txtOverview" label="${LabelOverview}"></paper-textarea>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldShortOverview" style="display: none;">
-                                            <label for="txtShortOverview">${LabelShortOverview}</label>
-                                            <textarea id="txtShortOverview"></textarea>
+                                        <div id="fldShortOverview" style="display: none;">
+                                            <paper-input id="txtShortOverview" type="text" label="${LabelShortOverview}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldPremiereDate" style="display: none;">
-                                            <label id="lblPremiereDate" for="txtPremiereDate">${LabelReleaseDate}</label>
-                                            <input type="date" id="txtPremiereDate" />
+                                        <div id="fldPremiereDate" style="display: none;">
+                                            <paper-input id="txtPremiereDate" type="date" label="${LabelReleaseDate}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldYear" style="display: none;">
-                                            <label id="lblYear" for="txtProductionYear">${LabelYear}</label>
-                                            <input type="number" id="txtProductionYear" />
+                                        <div id="fldYear" style="display: none;">
+                                            <paper-input id="txtProductionYear" type="number" label="${LabelYear}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldPlaceOfBirth" style="display: none;">
-                                            <label for="txtPlaceOfBirth">${LabelPlaceOfBirth}</label>
-                                            <input type="text" id="txtPlaceOfBirth" />
+                                        <div id="fldPlaceOfBirth" style="display: none;">
+                                            <paper-input id="txtPlaceOfBirth" type="text" label="${LabelPlaceOfBirth}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldEndDate" style="display: none;">
-                                            <label id="lblEndDate" for="txtEndDate">${LabelEndDate}</label>
-                                            <input type="date" id="txtEndDate" />
+                                        <div id="fldEndDate" style="display: none;">
+                                            <paper-input id="txtEndDate" type="date" label="${LabelEndDate}"></paper-input>
                                         </div>
-                                        <div data-role="fieldcontain" id="fldAirDays" style="display: none;">
-                                            <label for="selectAirDays">${LabelAirDays}</label>
+                                        <div id="fldAirDays" style="display: none;">
+                                            <p>${LabelAirDays}</p>
 
-                                            <div data-role="controlgroup" data-mini="true">
-                                                <input type="checkbox" class="chkAirDay" id="chkSunday" data-day="Sunday">
-                                                <label for="chkSunday">${OptionSunday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkMonday" data-day="Monday">
-                                                <label for="chkMonday">${OptionMonday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkTuesday" data-day="Tuesday">
-                                                <label for="chkTuesday">${OptionTuesday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkWednesday" data-day="Wednesday">
-                                                <label for="chkWednesday">${OptionWednesday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkThursday" data-day="Thursday">
-                                                <label for="chkThursday">${OptionThursday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkFriday" data-day="Friday">
-                                                <label for="chkFriday">${OptionFriday}</label>
-                                                <input type="checkbox" class="chkAirDay" id="chkSaturday" data-day="Saturday">
-                                                <label for="chkSaturday">${OptionSaturday}</label>
+                                            <div>
+                                                <paper-checkbox class="chkAirDay" data-day="Sunday">${OptionSunday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Monday">${OptionMonday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Tuesday">${OptionTuesday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Wednesday">${OptionWednesday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Thursday">${OptionThursday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Friday">${OptionFriday}</paper-checkbox>
+                                                <paper-checkbox class="chkAirDay" data-day="Saturday">${OptionSaturday}</paper-checkbox>
                                             </div>
+                                            <br />
 
                                         </div>
                                         <div id="fldAirTime" style="display: none;">
@@ -258,8 +230,7 @@
                                                 <paper-input id="txtDisplayMediaType" type="text" label="${LabelTreatImageAs}"></paper-input>
                                             </div>
                                             <div id="fldDisplaySpecialsInline" class="fldDisplaySetting">
-                                                <label for="chkDisplaySpecialsInline">${LabelDisplaySpecialsWithinSeasons}</label>
-                                                <input data-mini="true" type="checkbox" id="chkDisplaySpecialsInline" />
+                                                <paper-checkbox id="chkDisplaySpecialsInline">${LabelDisplaySpecialsWithinSeasons}</paper-checkbox>
                                             </div>
                                             <div id="fldDisplayOrder" class="fldDisplaySetting">
                                                 <label for="selectDisplayOrder" id="labelDisplayOrder">${LabelDisplayOrder}</label>
