--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -138,40 +138,13 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent timersTabContent">
-                        <div style="max-width: 600px; margin: 0 auto;">
-                            <div id="items"></div>
+                        <div style="max-width: 700px; margin: 0 auto;" id="items">
                         </div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent seriesTimersTabContent">
-                        <div style="max-width: 600px; margin: 0 auto;">
-                            <div style="text-align: right;">
-                                <button data-mini="true" data-inline="true" onclick="$('#sortPanel', $(this).parents('.page')).panel( 'toggle' );">${ButtonSort}</button>
-                            </div>
-                            <div id="items"></div>
-                        </div>
-                        <div data-role="panel" id="sortPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
-                            <form>
-                                <fieldset data-role="controlgroup">
-                                    <legend>
-                                        ${HeaderSortBy}
-                                    </legend>
-                                    <input class="radioSortBy defaultSort" type="radio" name="radioSortBy" id="radioSortName" value="on" checked="checked" data-sortby="SortName" data-mini="true">
-                                    <label for="radioSortName">${OptionNameSort}</label>
-                                    <input class="radioSortBy" type="radio" name="radioSortBy" id="radioPriority" value="off" data-sortby="Priority" data-mini="true">
-                                    <label for="radioPriority">${OptionPriority}</label>
-                                </fieldset>
-                                <fieldset data-role="controlgroup">
-                                    <legend>
-                                        ${HeaderSortOrder}
-                                    </legend>
-                                    <input class="radioSortOrder" type="radio" name="radioSortOrder" id="radioAscending" value="on" checked="checked" data-sortorder="Ascending" data-mini="true">
-                                    <label for="radioAscending">${OptionAscending}</label>
-                                    <input class="radioSortOrder" type="radio" name="radioSortOrder" id="radioDescending" value="off" data-sortorder="Descending" data-mini="true">
-                                    <label for="radioDescending">${OptionDescending}</label>
-                                </fieldset>
-                            </form>
+                        <div style="max-width: 700px; margin: 0 auto;" id="items">
                         </div>
                     </div>
                 </neon-animatable>
